--- a/Multimedia-Practica3/about.html
+++ b/Multimedia-Practica3/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gotham Ciudad De Vacaciones</title>
+    <title>Gotham Ciudad De Vacaciones - About</title>
     <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,9 +83,12 @@
                         <div class="seperator"></div>
                     </div>
                     <form action="#" class="messege">
-                        <input type="email" placeholder="Email">
-                        <input type="text" placeholder="Asunto">
-                        <textarea placeholder="Mensaje"></textarea>
+                        <label for="email">Email</label>
+                        <input type="email" placeholder="Email" id="email">
+                        <label for="subject">Asunto</label>
+                        <input type="text" placeholder="Asunto" id="subject">
+                        <label for="msg">Mensaje</label>
+                        <textarea placeholder="Mensaje" id="msg"></textarea>
                         <button class="boxed-btn">Enviar</button>
                     </form>
                 </div>
@@ -106,14 +109,9 @@
             <div class="row">
                 <div class="col-xl-4 col-md-4">
                     <div class="single_team text-center">
-                        <div class="thumb team_1">
-                            <div class="author_links">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
+                        <div class="thumb">
+                            <img src="img/team/team1.png" alt="Miembro del equipo" longdesc="#desc-team1">
+                            <div id=desc-team1 class="longdesc">Jesús Borrero, miembro del equipo</div>
                         </div>
                         <h3>Jesús Borrero</h3>
                         <p>Gotham Mayor</p>
@@ -121,30 +119,20 @@
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_team text-center">
-                            <div class="thumb team_2">
-                                    <div class="author_links">
-                                        <ul>
-                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="thumb">
+                                <img src="img/team/team2.png" alt="Miembro del equipo" longdesc="#desc-team2">
+                                <div id=desc-team2 class="longdesc">Alejandro Quesada, miembro del equipo</div>
+                            </div>
                         <h3>Alejandro Quesada</h3>
                         <p>Tourism Expert</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_team text-center">
-                            <div class="thumb team_3">
-                                    <div class="author_links">
-                                        <ul>
-                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
+                            <div class="thumb">
+                                <img src="img/team/team3.png" alt="Miembro del equipo" longdesc="#desc-team3">
+                                <div id=desc-team3 class="longdesc">Nacho Caballero, miembro del equipo</div>
+                            </div>
                         <h3>Nacho Caballero</h3>
                         <p>Gotham Architect</p>
                     </div>
