--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gotham Ciudad De Vacaciones</title>
+    <title>Gotham Ciudad De Vacaciones - Localizacion</title>
     <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,7 +72,7 @@
 <section class="contact-section">
         <div class="container">
                 <div class="embed-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26359294.213879213!2d-113.71754000532059!3d36.247089826313314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses!2ses!4v1586598707737!5m2!1ses!2ses"
+                    <iframe title="Mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26359294.213879213!2d-113.71754000532059!3d36.247089826313314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses!2ses!4v1586598707737!5m2!1ses!2ses"
                             frameborder="0" allowfullscreen></iframe>
                 </div>
 
