--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gotham Ciudad De Vacaciones</title>
+    <title>Gotham Ciudad De Vacaciones - Servicios</title>
     <meta name="description" content="La ciudad de Gotham es única en el mundo, llena de servicios y oportunidades para
     pasar unas vacaciones soñadas">
     <meta name="viewport" content="width=device-width, initial-scale=1">
