--- a/Multimedia-Practica3/about.html
+++ b/Multimedia-Practica3/about.html
@@ -84,11 +84,11 @@
                     </div>
                     <form action="#" class="messege">
                         <label for="email">Email</label>
-                        <input type="email" placeholder="Email" id="email">
+                        <input type="email" placeholder="Escribe tu Email" id="email">
                         <label for="subject">Asunto</label>
-                        <input type="text" placeholder="Asunto" id="subject">
+                        <input type="text" placeholder="Escribe el Asunto" id="subject">
                         <label for="msg">Mensaje</label>
-                        <textarea placeholder="Mensaje" id="msg"></textarea>
+                        <textarea placeholder="Escribe tu Mensaje" id="msg"></textarea>
                         <button class="boxed-btn">Enviar</button>
                     </form>
                 </div>
