--- a/Multimedia-Practica3/location.html
+++ b/Multimedia-Practica3/location.html
@@ -32,7 +32,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
+                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
                                     <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
@@ -52,6 +52,10 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="get_in_tauch">
                                 <a href="about.html" class="boxed-btn">Contáctanos</a>
+                                <a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+                                    <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+                                         alt="Icono de conformidad con el Nivel Doble-A,de las Directrices de Accesibilidad parael Contenido Web 1.0 del W3C-WAI">
+                                </a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -104,6 +108,13 @@
             </div>
         </div>
     </section>
+
+    <div class="d-block d-lg-none mobile-aa-icon">
+        <a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+            <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+                 alt="Icono de conformidad con el Nivel Doble-A,de las Directrices de Accesibilidad parael Contenido Web 1.0 del W3C-WAI">
+        </a>
+    </div>
 
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
