--- a/Multimedia-Practica3/service.html
+++ b/Multimedia-Practica3/service.html
@@ -31,7 +31,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img style="height: 50%; width: 50%" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
+                                    <img class="logo-img" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
                                     <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
@@ -51,6 +51,10 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="get_in_tauch">
                                 <a href="about.html" class="boxed-btn">Contáctanos</a>
+                                <a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+                                    <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+                                         alt="Icono de conformidad con el Nivel Doble-A,de las Directrices de Accesibilidad parael Contenido Web 1.0 del W3C-WAI">
+                                </a>
                             </div>
                         </div>
                         <div class="col-12">
@@ -146,7 +150,37 @@
                     </div>
                 </div>
             </div>
+            <div class="row align-items-center gotham-video" style="margin-top:5%">
+                <div class="col-xl-6 col-md-6">
+                    <div class="about_thumb container">
+                        <div class="embed-container">
+                            <iframe width="542" height="400"
+                                    src="https://www.youtube.com/embed/Vz3lpQlgHTo" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-5 offset-xl-1 col-md-6">
+                    <div class="about_info">
+                        <div class="section_title">
+                            <span class="sub_heading">Tour por Gotham</span>
+                            <h3>Conoce todos los rincones de la ciudad</h3>
+                            <div class="seperator"></div>
+                        </div>
+                        <p>Con nuestro tour por la ciudad podrás conocer todos los rincones de la misma, desde los
+                            edificios y lugares más emblemáticos hasta los sitios más escondidos. Aquí te dejamos un vídeo
+                            presentación del tour para prepararte.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div class="d-block d-lg-none mobile-aa-icon">
+        <a href="http://www.w3.org/WAI/WCAG1AA-Conformance" title="Explicación del Nivel Doble-A de Conformidad">
+            <img height="32" width="88" src="http://www.w3.org/WAI/wcag1AA"
+                 alt="Icono de conformidad con el Nivel Doble-A,de las Directrices de Accesibilidad parael Contenido Web 1.0 del W3C-WAI">
+        </a>
     </div>
 
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
