--- a/Multimedia-Practica3/index.html
+++ b/Multimedia-Practica3/index.html
@@ -31,7 +31,7 @@
                             <div class="logo-img">
                                 <a href="index.html">
                                     <img class="logo-img" src="img/favicon.png" alt="Logo Gotham" longdesc="#desc-favicon">
-                                    <div id=desc-favicon class="longdesc">Logo de del murciélago perteneciente a Batman</div>
+                                    <div id=desc-favicon class="longdesc">Logo del murciélago perteneciente a Batman</div>
                                 </a>
                             </div>
                         </div>
