fix: little changes

--- a/Multimedia-Practica3/about.html
+++ b/Multimedia-Practica3/about.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <h1 hidden>Gotham city</h1>
     <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area white-bg">
